[package]
name = "mylayer2"
version = "0.1.0"
edition = "2024"

[dependencies]
ethereum-types = "0.15.1"
sha3 = "0.10.8"
rlp = "0.6.1"
k256 = "0.13.4"
hex-literal = "1.0.0"
anyhow = "1.0"
bytes = "1.10.1"
once_cell = "1.21.3"
eth_trie = "0.5.0"
trie-db = "0.30.0"
either = "1.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"